fix(MarketCharts): hide chart overflow

--- a/src/styles/pages/_market.scss
+++ b/src/styles/pages/_market.scss
@@ -71,6 +71,7 @@
 
     &__charts {
       grid-area: charts;
+      overflow: hidden;
     }
 
     &__stats {
